Fix block bitmap end position computation

PR:                     261850
Reported by:            chenguang.wang
MFC after:              2 weeks